--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,7 @@ jobs:
         addrsize: ["64"]
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: ilammy/setup-nasm@v1
       - uses: AlchemyViewer/action-autobuild@v4
         with:
           addrsize: ${{ matrix.addrsize }}
