--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,8 +10,10 @@ jobs:
     steps:
       - name: Setup Homebrew Packages
         if: ${{ runner.os == 'Windows' }}
-        shell: bash
-        run: choco install nasm
+        shell: pwsh
+        run: |
+          choco install nasm
+          echo "C:\Program Files\NASM" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - uses: AlchemyViewer/action-autobuild@v4
         with:
           addrsize: ${{ matrix.addrsize }}
